overflow fixed

--- a/src/styles/blocks/about-us.scss
+++ b/src/styles/blocks/about-us.scss
@@ -1,4 +1,6 @@
 .about-us {
+  overflow: hidden;
+
   &__article {
     margin-bottom: 110px;
 
